Sorting functionality added. Some class methods modified

--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -77,13 +77,16 @@ aside {
   background: #373b69;
 }
 main{
+
+
+
+}
+.movies-container {
   display:flex;
   flex-wrap: wrap;
   justify-content: flex-start;
   flex-grow: 1;
   flex-direction: row;
-
-
 }
 
 .movie {
