--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -25,6 +25,9 @@
 :root{
   --primary-color:#22254b;
   --secondary-color: #373b69;
+  --select-border: var(--secondary-color);
+  --select-focus: var(--secondary-color);
+  --select-arrow: var(--select-border);
 }
 
 body{
@@ -88,7 +91,20 @@ main{
   flex-grow: 1;
   flex-direction: row;
 }
-
+.select {
+  width: 100%;
+  min-width: 15ch;
+  max-width: 30ch;
+  border: 1px solid var(--select-border);
+  border-radius: 0.25em;
+  padding: 0.25em 0.5em;
+  font-size: 1.25rem;
+  cursor: pointer;
+  line-height: 1.1;
+  background-color: var(--secondary-color);
+  margin: 1rem 0 0.5rem 1rem;
+  color: rgba(#FFF, 0.75);
+}
 .movie {
   width: 200px;
   margin: 1rem;
@@ -140,13 +156,18 @@ main{
 }
 #like {
   cursor: pointer;
+  font-size: 1.5em;
+}
+#like:hover {
+  opacity: 0.6;
+  transition-duration: 500ms;
 }
 .overview{
   position:absolute;
   left:0;
   right:0;
   bottom:0;
-  background-color: #fff;
+  background-color: var(--secondary-color);
   padding: 1rem;
   max-height: 100%;
   transform:translateY(101%);
@@ -156,6 +177,7 @@ main{
 .movie:hover .overview{
   transform:translateY(5%);
   overflow-y: auto;
+
 }
 
 .selectdiv {
